--- a/view/root/point_mng_list.html
+++ b/view/root/point_mng_list.html
@@ -211,48 +211,50 @@
 						<span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title">포인트 등록</h4>
 					</div>
-					<div class="modal-body">
-						<div class="modal_area">
-							<div id="point_name">
-								<p>포인트 명</p>
-								<input type="text" class="form-control" placeholder="Point Name">
+					<form action="" method="post">
+						<div class="modal-body">
+							<div class="modal_area">
+								<div id="point_name">
+									<p>포인트 명</p>
+									<input type="text" class="form-control" placeholder="Point Name">
+								</div>
+								<div id="point_value">
+									<p>지급 포인트</p>
+									<input type="text" class="form-control" placeholder="Point">
+								</div>
 							</div>
-							<div id="point_value">
-								<p>지급 포인트</p>
-								<input type="text" class="form-control" placeholder="Point">
+							<div class="modal_area">
+								<div id="post_method">
+									<p>지급방법</p>
+									<input type="radio" name="p_method" value="관리자지급"><span> 관리자 지급</span>&nbsp;&nbsp;&nbsp;
+									<input type="radio" name="p_method" value="사용자 직접입력" checked><span> 사용자 직접입력</span>
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="point_date">
+									<p>사용 기한</p>
+									<input type="text" id="datepicker" class="form-control" placeholder="Point Use by Date">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="point_code">
+									<p>포인트 코드</p>
+									<input type="text" class="form-control" placeholder="Point Code">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="overlap_method">
+									<p>중복사용 가능여부</p>
+									<input type="radio" name="overlap" value="가능" checked><span> 가능</span>&nbsp;&nbsp;&nbsp;
+									<input type="radio" name="overflap" value="불가능"><span> 불가능</span>
+								</div>
 							</div>
 						</div>
-						<div class="modal_area">
-							<div id="post_method">
-								<p>지급방법</p>
-								<input type="radio" name="p_method" value="관리자지급"><span> 관리자 지급</span>&nbsp;&nbsp;&nbsp;
-								<input type="radio" name="p_method" value="사용자 직접입력" checked><span> 사용자 직접입력</span>
-							</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
+							<button type="button" class="btn btn-primary">추가</button>
 						</div>
-						<div class="modal_area">
-							<div id="point_date">
-								<p>사용 기한</p>
-								<input type="text" id="datepicker" class="form-control" placeholder="Point Use by Date">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="point_code">
-								<p>포인트 코드</p>
-								<input type="text" class="form-control" placeholder="Point Code">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="overlap_method">
-								<p>중복사용 가능여부</p>
-								<input type="radio" name="overlap" value="가능" checked><span> 가능</span>&nbsp;&nbsp;&nbsp;
-								<input type="radio" name="overflap" value="불가능"><span> 불가능</span>
-							</div>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
-						<button type="button" class="btn btn-primary">추가</button>
-					</div>
+					</form>
 				</div>
 				<!-- /.modal-content -->
 			</div>
@@ -269,48 +271,50 @@
 						<span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title">포인트 등록</h4>
 					</div>
-					<div class="modal-body">
-						<div class="modal_area">
-							<div id="point_name">
-								<p>포인트 명</p>
-								<input type="text" class="form-control" placeholder="Point Name">
+					<form action="" method="post">
+						<div class="modal-body">
+							<div class="modal_area">
+								<div id="point_name">
+									<p>포인트 명</p>
+									<input type="text" class="form-control" placeholder="Point Name">
+								</div>
+								<div id="point_value">
+									<p>지급 포인트</p>
+									<input type="text" class="form-control" placeholder="Point">
+								</div>
 							</div>
-							<div id="point_value">
-								<p>지급 포인트</p>
-								<input type="text" class="form-control" placeholder="Point">
+							<div class="modal_area">
+								<div id="post_method">
+									<p>지급방법</p>
+									<input type="radio" name="p_method" value="관리자지급"><span> 관리자 지급</span>&nbsp;&nbsp;&nbsp;
+									<input type="radio" name="p_method" value="사용자 직접입력" checked><span> 사용자 직접입력</span>
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="point_date">
+									<p>사용 기한</p>
+									<input type="text" id="datepicker" class="form-control" placeholder="Point Use by Date">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="point_code">
+									<p>포인트 코드</p>
+									<input type="text" class="form-control" placeholder="Point Code">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="overlap_method">
+									<p>중복사용 가능여부</p>
+									<input type="radio" name="overlap" value="가능" checked><span> 가능</span>&nbsp;&nbsp;&nbsp;
+									<input type="radio" name="overflap" value="불가능"><span> 불가능</span>
+								</div>
 							</div>
 						</div>
-						<div class="modal_area">
-							<div id="post_method">
-								<p>지급방법</p>
-								<input type="radio" name="p_method" value="관리자지급"><span> 관리자 지급</span>&nbsp;&nbsp;&nbsp;
-								<input type="radio" name="p_method" value="사용자 직접입력" checked><span> 사용자 직접입력</span>
-							</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
+							<button type="button" class="btn btn-primary">수정</button>
 						</div>
-						<div class="modal_area">
-							<div id="point_date">
-								<p>사용 기한</p>
-								<input type="text" id="datepicker" class="form-control" placeholder="Point Use by Date">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="point_code">
-								<p>포인트 코드</p>
-								<input type="text" class="form-control" placeholder="Point Code">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="overlap_method">
-								<p>중복사용 가능여부</p>
-								<input type="radio" name="overlap" value="가능" checked><span> 가능</span>&nbsp;&nbsp;&nbsp;
-								<input type="radio" name="overflap" value="불가능"><span> 불가능</span>
-							</div>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
-						<button type="button" class="btn btn-primary">수정</button>
-					</div>
+					</form>
 				</div>
 				<!-- /.modal-content -->
 			</div>
