--- a/view/root/user_mng_cus.html
+++ b/view/root/user_mng_cus.html
@@ -290,72 +290,74 @@
 						<span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title">회원정보</h4>
 					</div>
-					<div class="modal-body">
-						<div class="modal_area">
-							<div id="user_id">
-								<p>일반 사용자 ID(이메일)</p>
-								<input type="text" class="form-control" placeholder="e-mail">
+					<form action="" method="post">
+						<div class="modal-body">
+							<div class="modal_area">
+								<div id="user_id">
+									<p>일반 사용자 ID(이메일)</p>
+									<input type="text" class="form-control" placeholder="e-mail">
+								</div>
+								<div id="user_name">
+									<p>회원이름</p>
+									<input type="text" class="form-control" placeholder="Name">
+								</div>
 							</div>
-							<div id="user_name">
-								<p>회원이름</p>
-								<input type="text" class="form-control" placeholder="Name">
+							<div class="modal_area">
+								<div id="address">
+									<p>주소</p>
+									<input type="text" class="form-control" placeholder="Address">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="user_address">
+									<p>상세주소</p>
+									<input type="text" class="form-control" placeholder="User Address">
+								</div>
+								<div id="user_phone">
+									<p>회원 전화번호</p>
+									<input type="text" class="form-control" placeholder="User Phone">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="buy_shortest">
+									<p>최근 구매액</p>
+									<input type="text" class="form-control" value="0">
+								</div>
+								<div id="buy_avg">
+									<p>평균 구매액</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+								<div id="buy_sum">
+									<p>누적 구매횟수</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="buy_total">
+									<p>총 구매액</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+								<div id="point">
+									<p>보유 포인트</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="join_date">
+									<p>회원가입일</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+								<div id="last_login">
+									<p>마지막 접속일</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
 							</div>
 						</div>
-						<div class="modal_area">
-							<div id="address">
-								<p>주소</p>
-								<input type="text" class="form-control" placeholder="Address">
-							</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
+							<button type="button" class="btn btn-primary">추가</button>
 						</div>
-						<div class="modal_area">
-							<div id="user_address">
-								<p>상세주소</p>
-								<input type="text" class="form-control" placeholder="User Address">
-							</div>
-							<div id="user_phone">
-								<p>회원 전화번호</p>
-								<input type="text" class="form-control" placeholder="User Phone">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="buy_shortest">
-								<p>최근 구매액</p>
-								<input type="text" class="form-control" value="0">
-							</div>
-							<div id="buy_avg">
-								<p>평균 구매액</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-							<div id="buy_sum">
-								<p>누적 구매횟수</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="buy_total">
-								<p>총 구매액</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-							<div id="point">
-								<p>보유 포인트</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="join_date">
-								<p>회원가입일</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-							<div id="last_login">
-								<p>마지막 접속일</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
-						<button type="button" class="btn btn-primary">추가</button>
-					</div>
+					</form>
 				</div>
 				<!-- /.modal-content -->
 			</div>
@@ -372,72 +374,74 @@
 						<span aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title">회원정보</h4>
 					</div>
-					<div class="modal-body">
-						<div class="modal_area">
-							<div id="user_id">
-								<p>일반 사용자 ID(이메일)</p>
-								<input type="text" class="form-control" placeholder="e-mail">
+					<form action="" method="post">
+						<div class="modal-body">
+							<div class="modal_area">
+								<div id="user_id">
+									<p>일반 사용자 ID(이메일)</p>
+									<input type="text" class="form-control" placeholder="e-mail">
+								</div>
+								<div id="user_name">
+									<p>회원이름</p>
+									<input type="text" class="form-control" placeholder="Name">
+								</div>
 							</div>
-							<div id="user_name">
-								<p>회원이름</p>
-								<input type="text" class="form-control" placeholder="Name">
+							<div class="modal_area">
+								<div id="address">
+									<p>주소</p>
+									<input type="text" class="form-control" placeholder="Address">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="user_address">
+									<p>상세주소</p>
+									<input type="text" class="form-control" placeholder="User Address">
+								</div>
+								<div id="user_phone">
+									<p>회원 전화번호</p>
+									<input type="text" class="form-control" placeholder="User Phone">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="buy_shortest">
+									<p>최근 구매액</p>
+									<input type="text" class="form-control" value="0">
+								</div>
+								<div id="buy_avg">
+									<p>평균 구매액</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+								<div id="buy_sum">
+									<p>누적 구매횟수</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="buy_total">
+									<p>총 구매액</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+								<div id="point">
+									<p>보유 포인트</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+							</div>
+							<div class="modal_area">
+								<div id="join_date">
+									<p>회원가입일</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
+								<div id="last_login">
+									<p>마지막 접속일</p>
+									<input type="text" class="form-control"  value="0">
+								</div>
 							</div>
 						</div>
-						<div class="modal_area">
-							<div id="address">
-								<p>주소</p>
-								<input type="text" class="form-control" placeholder="Address">
-							</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
+							<button type="button" class="btn btn-primary">수정</button>
 						</div>
-						<div class="modal_area">
-							<div id="user_address">
-								<p>상세주소</p>
-								<input type="text" class="form-control" placeholder="User Address">
-							</div>
-							<div id="user_phone">
-								<p>회원 전화번호</p>
-								<input type="text" class="form-control" placeholder="User Phone">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="buy_shortest">
-								<p>최근 구매액</p>
-								<input type="text" class="form-control" value="0">
-							</div>
-							<div id="buy_avg">
-								<p>평균 구매액</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-							<div id="buy_sum">
-								<p>누적 구매횟수</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="buy_total">
-								<p>총 구매액</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-							<div id="point">
-								<p>보유 포인트</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-						</div>
-						<div class="modal_area">
-							<div id="join_date">
-								<p>회원가입일</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-							<div id="last_login">
-								<p>마지막 접속일</p>
-								<input type="text" class="form-control"  value="0">
-							</div>
-						</div>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
-						<button type="button" class="btn btn-primary">수정</button>
-					</div>
+					</form>
 				</div>
 				<!-- /.modal-content -->
 			</div>
