--- a/resources/common/css/style_item.css
+++ b/resources/common/css/style_item.css
@@ -9,7 +9,7 @@
 }
 
 .menu_area{
-	width:100px;
+	width:150px;
 	float:left;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .data_search{
-	width:380px;
+	width:420px;
 	float:right;
 	margin-right:15px;
 }
@@ -75,7 +75,7 @@
 	margin-left:15px;
 }
 
-@media(max-width:1268px){
+@media(max-width:1555px){
 	.menu_area{
 		display:none;
 	}
@@ -85,30 +85,106 @@
 	}
 }
 
-@media(max-width:1090px){
+@media(max-width:1135px){
 	.data_search{
 		margin-left:15px;
 		float:left;
 	}
 }
 
-.modal_side_area{
-	width:300px;
+@media(max-width:770px){
+	.data_toolbar{
+		margin-left:2px;
+	}
+}
+
+.modal_content{
+	height:700px;
+	clear:none;
+}
+
+.modal_content .modal_side_area{
+	float:left;
+	width:20%;
+}
+
+.modal_side_area .item_set{
+	width:100%;
 	float:left;
 }
 
-.modal_area{
-	width:800px;
+.modal_side_area input[type="text"]{
+	width:100%;
+}
+
+.modal_side_area .item_set .set_area{
+	width:100%;
+	margin-top:15px;
+	clear:none;
+}
+
+.modal_side_area .item_set .set_area p{
+	font-size:15px;
+}
+
+.modal_side_area .item_set .set_area input[type="checkbox"]{
+	margin-top:10px;
+	margin-bottom:10px;
+}
+
+.modal_content .modal_area{
+	float:right;
+	width:75%;
+}
+
+.modal_content .modal_area .item_editor{
 	float:left;
+	width:100%;
 }
 
 .sub_title{
 	text-align: center;
+	clear:none;
+	margin-bottom: 30px;
+}
+
+.sub_title b{
+	font-weight:700px;
+	font-size:18px;
+}
+
+.upload{
+	margin:5px;
+}
+
+.upload_btn{
+	margin-top:3px;
+	position:absolute;
+	background:url(../img/upload_icon.png) no-repeat;
+	border:none;
+	width:50px;
+	height:50px;
+}
+
+#upload_img{
+	width:50px;
+	height:50px;
+	opacity: 0;
+	position:relative;
+}
+
+.img_prev{
+	float:left;
+	margin-left:5px;
+}
+
+.img_prev img{
+	margin-right:10px;
 }
 
 @media(min-width:768px){
 	.modal-dialog{
-		width:1200px;
+		width:85%;
 		margin:30px auto 30px auto;
 	}
 }
