--- a/resources/common/css/style_point.css
+++ b/resources/common/css/style_point.css
@@ -73,6 +73,18 @@
 	.area .data_info{
 		margin-left:3px;
 	}
+
+	.data_btn{
+		margin-left: 15px;
+	}
+}
+
+@media(max-width:880px){
+	.date_select_bar {
+		margin-left:15px;
+		float:left;
+		clear:none;
+	}
 }
 
 /* Modal(포인트 등록) */
