--- a/view/root/item_mng.html
+++ b/view/root/item_mng.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
 		<link rel="stylesheet" href="../../resources/common/css/style_item.css">
+		<link rel="stylesheet" href="../../resources/template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -179,7 +180,7 @@
 			</div>
 			<!-- /.content-wrapper -->
 
-			<!-- Modal (회원추가) -->
+			<!-- Modal (상품추가) -->
 			<div class="modal fade" id="modal-default">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -188,22 +189,89 @@
 							<span aria-hidden="true">&times;</span></button>
 							<h4 class="modal-title">상품등록</h4>
 						</div>
-						<div class="modal-body">
-							<div class="modal_side_area">
-								<div class="sub_title">
-									<b>상품설정</b>
+						<form action="#" method="post">
+							<div class="modal-body">
+								<div class="modal_content">
+									<div class="modal_side_area">
+										<div class="sub_title">
+											<b>상품설정</b>
+										</div>
+										<div class="item_set">
+											<div class="set_area">
+												<p>상품이름</p>
+												<input type="text" class="form_control" placeholder="상품이름">
+											</div>
+											<div class="set_area">
+												<p>판매가격</p>
+												<input type="text" class="form_control" placeholder="판매가격"><br>
+												<input type="checkbox" id="dc_check" class="form_control"> 할인가격<br>
+												<input type="text" id="dc_pay" class="form_control" placeholder="할인가격" disabled>
+											</div>
+											<div class="set_area">
+												<p>중량</p>
+												<input type="text" class="form_control" placeholder="중량(단위 : g)">
+											</div>
+											<div class="set_area">
+												<p>반찬 분류(카테고리)</p>
+												<select class="form-control select2" style="width: 100%;">
+													<option selected="selected">선택해주세요</option>
+													<option>국</option>
+													<option>메인반찬</option>
+													<option>일반반찬</option>
+													<option>기타</option>
+												</select>
+											</div>
+											<div class="set_area">
+												<p>세트 분류</p>
+												<select class="form-control select2" style="width: 100%;">
+													<option selected="selected">선택해주세요</option>
+													<option>세트 1</option>
+													<option>세트 2</option>
+													<option>세트 3</option>
+													<option>세트 4</option>
+													<option>세트 5</option>
+													<option>세트 6</option>
+												</select>
+											</div>
+											<div class="set_area">
+												<p>썸네일이미지(최대 3장)</p>
+												<div class="img_prev"></div>
+												<div class="upload">
+													<button class="upload_btn"></button>
+													<input type="file" id="upload_img" multiple>
+												</div>
+											</div>
+											<div class="set_area">
+												<p>이벤트 표시</p>
+												<select class="form-control select2" multiple="multiple" data-placeholder="선택해주세요" style="width: 100%;">
+													<option>이벤트 1</option>
+													<option>이벤트 2</option>
+													<option>이벤트 3</option>
+													<option>이벤트 4</option>
+												</select>
+											</div>
+										</div>
+									</div>
+									<div class="modal_area">
+										<div class="sub_title">
+											<b>상세설명</b>
+										</div>
+										<div class="item_editor">
+											<!-- /.box-header -->
+											<div class="box-body pad">
+												<form>
+													<textarea class="textarea" placeholder="자유롭게 작성하세요." style="width: 100%; height: 580px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
+												</form>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
-							<div class="modal_area">
-								<div class="sub_title">
-									<b>상세설명</b>
-								</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
+								<button type="button" class="btn btn-primary">추가</button>
 							</div>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default pull-left" data-dismiss="modal">취소</button>
-							<button type="button" class="btn btn-primary">추가</button>
-						</div>
+						</form>
 					</div>
 					<!-- /.modal-content -->
 				</div>
@@ -238,6 +306,9 @@
 		<script src="../../resources/template/bower_components/datatables.net/js/jquery.dataTables.js"></script>
 		<script src="../../resources/template/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
 		<script src="../../resources/common/js/table_item.js"></script>
+		<!-- Bootstrap3-wisihtml5 -->
+		<script src="../../resources/template/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+		<script src="../../resources/common/js/plugin_item.js"></script>
 		<!-- Optionally, you can add Slimscroll and FastClick plugins.
 		Both of these plugins are recommended to enhance the
 		user experience. -->
