--- a/view/root/sales_mng.html
+++ b/view/root/sales_mng.html
@@ -8,8 +8,12 @@
 		<link rel="stylesheet" href="../../resources/template/bower_components/bootstrap/dist/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/font-awesome/css/font-awesome.css">
 		<link rel="stylesheet" href="../../resources/template/bower_components/Ionicons/css/ionicons.css">
+		<link rel="stylesheet" href="../../resources/template/bower_components/select2/dist/css/select2.css">
+		<link rel="stylesheet" href="../../resources/template/bower_components/datatables.net-bs/css/dataTables.bootstrap.css">
+		<link rel="stylesheet" href="../../resources/template/bower_components/bootstrap-daterangepicker/daterangepicker.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/AdminLTE.css">
 		<link rel="stylesheet" href="../../resources/template/dist/css/skins/skin-yellow.css">
+		<link rel="stylesheet" href="../../resources/common/css/style_sales.css">
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -133,11 +137,68 @@
 
 				<!-- Main content -->
 				<section class="content container-fluid">
-
-				<!--------------------------
-				| Your Page Content Here |
-				-------------------------->
-
+					<div class="content container-fluid area">
+						<table id="sales_list" class="table table-bordered table-striped">
+							<thead>
+								<th>사업자명</th>
+								<th>주문 횟수</th>
+								<th>상품 매출액</th>
+								<th>배송비</th>
+							</thead>
+							<tbody>
+								<tr>
+									<td>맘스찬방</td>
+									<td>87</td>
+									<td>2,401,200</td>
+									<td>261,000</td>
+								</tr>
+								<tr>
+									<td>맘스찬방</td>
+									<td>87</td>
+									<td>2,401,200</td>
+									<td>261,000</td>
+								</tr>
+								<tr>
+									<td>맘스찬방</td>
+									<td>87</td>
+									<td>2,401,200</td>
+									<td>261,000</td>
+								</tr>
+								<tr>
+									<td>맘스찬방</td>
+									<td>87</td>
+									<td>2,401,200</td>
+									<td>261,000</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<div class="content container-fluid area">
+						<table id="calc_list" class="table table-bordered table-striped">
+							<thead>
+								<th>사업자명</th>
+								<th>주문 횟수</th>
+								<th>총 결재액</th>
+								<th>상품 매출액(+)</th>
+								<th>배송비(+)</th>
+								<th>할인금액(-)</th>
+								<th>판매 수수료</th>
+								<th>최종 정산액</th>
+							</thead>
+							<tbody>
+								<tr>
+									<td>맘스찬방</td>
+									<td>87</td>
+									<td>2,654,200</td>
+									<td>2,401,200</td>
+									<td>261,000</td>
+									<td>8,000</td>
+									<td>360,180</td>
+									<td>2,294,020</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
 				</section>
 				<!-- /.content -->
 			</div>
@@ -164,7 +225,15 @@
 		<script src="../../resources/template/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<!-- AdminLTE App -->
 		<script src="../../resources/template/dist/js/adminlte.min.js"></script>
-
+		<!-- Select2 -->
+		<script src="../../resources/template/bower_components/select2/dist/js/select2.full.js"></script>
+		<!-- DataTables -->
+		<script src="../../resources/template/bower_components/datatables.net/js/jquery.dataTables.js"></script>
+		<script src="../../resources/template/bower_components/datatables.net-bs/js/dataTables.bootstrap.js"></script>
+		<!-- date-range-picker -->
+		<script src="../../resources/template/bower_components/moment/min/moment.min.js"></script>
+		<script src="../../resources/template/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+		<script src="../../resources/common/js/table_sales.js"></script>
 		<!-- Optionally, you can add Slimscroll and FastClick plugins.
 		Both of these plugins are recommended to enhance the
 		user experience. -->
