--- a/view/root/board_question.html
+++ b/view/root/board_question.html
@@ -122,14 +122,10 @@
 			<div class="content-wrapper">
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
-					<h1>
-						통합게시판
-						<small>자주하는질문</small>
-					</h1>
-					<ol class="breadcrumb">
-						<li><i class="fa fa-list"></i> &nbsp;통합게시판</li>
-						<li class="active">자주하는질문</li>
-					</ol>
+					<h4>
+						<i class="fa fa-list"></i> &nbsp;통합게시판
+						<small>> 자주하는질문</small>
+					</h4>
 				</section>
 
 				<!-- Main content -->
