--- a/view/root/point_mng_list.html
+++ b/view/root/point_mng_list.html
@@ -125,14 +125,10 @@
 			<div class="content-wrapper">
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
-					<h1>
-						포인트관리
-						<small>포인트목록</small>
-					</h1>
-					<ol class="breadcrumb">
-						<li><i class="fa fa-krw"></i> &nbsp;포인트관리</li>
-						<li class="active">포인트목록</li>
-					</ol>
+					<h4>
+						<i class="fa fa-krw"></i> &nbsp;포인트관리
+						<small>> 포인트목록</small>
+					</h4>
 				</section>
 
 				<!-- Main content -->
