--- a/view/root/sales_mng.html
+++ b/view/root/sales_mng.html
@@ -126,13 +126,9 @@
 			<div class="content-wrapper">
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
-					<h1>
-						매출관리
-					</h1>
-					<ol class="breadcrumb">
-						<li><a href="#"><i class="fa fa-inbox"></i> &nbsp;매출관리</a></li>
-						<li class="active">Here</li>
-					</ol>
+					<h4>
+						<i class="fa fa-inbox"></i> &nbsp;매출관리
+					</h4>
 				</section>
 
 				<!-- Main content -->
