--- a/view/root/user_mng_admin.html
+++ b/view/root/user_mng_admin.html
@@ -123,14 +123,10 @@
 			<div class="content-wrapper">
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
-					<h1>
-						회원관리
-						<small>관리자</small>
-					</h1>
-					<ol class="breadcrumb">
-						<li><i class="fa fa-users"></i> &nbsp;회원관리</a></li>
-						<li class="active">관리자</li>
-					</ol>
+					<h4>
+						<i class="fa fa-users"></i> &nbsp;회원관리</a>
+						<small>> 관리자</small>
+					</h4>
 				</section>
 
 				<!-- Main content -->
