--- a/view/root/user_mng_cus.html
+++ b/view/root/user_mng_cus.html
@@ -124,14 +124,10 @@
 			<div class="content-wrapper">
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
-					<h1>
-						회원관리
-						<small>일반사용자</small>
-					</h1>
-					<ol class="breadcrumb">
-						<li><i class="fa fa-dashboard"></i> &nbsp;회원관리</li>
-						<li class="active">일반사용자</li>
-					</ol>
+					<h4>
+						<i class="fa fa-users"></i> &nbsp;회원관리
+						<small>> 일반사용자</small>
+					</h4>
 				</section>
 
 				<!-- Main content -->
