--- a/view/root/item_mng.html
+++ b/view/root/item_mng.html
@@ -126,13 +126,9 @@
 			<div class="content-wrapper">
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
-					<h1>
-						상품추가하기
-					</h1>
-					<ol class="breadcrumb">
-						<li><i class="fa fa-gift"></i> &nbsp;상품추가하기</li>
-						<li class="active">Here</li>
-					</ol>
+					<h4>
+						<i class="fa fa-gift"></i> &nbsp;상품추가하기
+					</h4>
 				</section>
 
 				<!-- Main content -->
@@ -144,7 +140,7 @@
 							</div>
 							<div class="menu_list">
 								<ul>
-									<li><a href="#">전체(35)</a></li>
+									<li class="active"><a href="#">전체(35)</a></li>
 									<li><a href="#">국(2)</a></li>
 									<li><a href="#">메인반찬(4)</a></li>
 									<li><a href="#">일반반찬(28)</a></li>
@@ -165,7 +161,7 @@
 								<tbody>
 									<tr>
 										<td><input type="checkbox"></td>
-										<td><img src="../../resources/common/img/logo_grandmachan_s.png"></td>
+										<td><img src="../../resources/common/img/logo_grandmachan_s.png" style="width:50px;height:50px;"></td>
 										<td>비빔오징어젓갈</td>
 										<td>200g</td>
 										<td>3,000원</td>
