--- a/view/root/user_mng_lic.html
+++ b/view/root/user_mng_lic.html
@@ -125,14 +125,10 @@
 			<div class="content-wrapper">
 				<!-- Content Header (Page header) -->
 				<section class="content-header">
-					<h1>
-						회원관리
-						<small>사업자</small>
-					</h1>
-					<ol class="breadcrumb">
-						<li><i class="fa fa-dashboard"></i> 회원관리</li>
-						<li class="active">사업자</li>
-					</ol>
+					<h4>
+						<i class="fa fa-users"></i> &nbsp;회원관리
+						<small>> 사업자</small>
+					</h4>
 				</section>
 
 				<!-- Main content -->
